[project]
name = "lir-agent"
version = "0.1.0"
description = "Agent which is modify itself"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.3",
    "langchain-anthropic>=1.3.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.5",
    "python-dotenv>=1.2.1",
]
