[project]
name = "lir-agent"
version = "0.1.0"
description = "Agent which is modify itself"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.3.0",
    "langchain>=1.2.3",
    "langchain-anthropic>=1.3.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "wordcloud>=1.9.5",
]
